fixed alignment in home page and adding geolocation to yelp search page

--- a/public/stylesheets/defaultPage.css
+++ b/public/stylesheets/defaultPage.css
@@ -110,10 +110,12 @@ img {
 .search {
     font-size: 30px;
     text-align: center;
-    position: absolute;
-    top: 250px;
-    left: 80px;
-    margin-left: 500px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+    width: 1000px;
 }
 .searchFood {
     border-top:		2px solid #cc885a;
